# playground

./: .gitignore  Cargo.toml  errors.txt  log.txt
.devcontainer/: devcontainer.json
.zed/: tasks.json
benches/: benchmark.rs
editor/: Cargo.toml  text.txt
editor/src/: app.rs  main.rs
main/: Cargo.toml
main/src/: arithmetic.rs  async_exp.rs  compose.rs  go.rs  guard_map.rs  lib.rs  linked_list.rs  main.rs  map.rs  mixture.rs  plus.rs  react.rs  recipe.rs  set.rs  tree.rs  whoops.rs  wrap.rs
object-derive/: Cargo.toml
object-derive/src/: lib.rs
puzzles/: .gitignore  Cargo.toml
puzzles/src/: main.rs  q136.rs  q2.rs  q3.rs  q509.rs
puzzles/src/aoc25/: day1.rs  day2.rs  mod.rs
puzzles/src/aoc25/inputs/: input_file.rs
puzzles/src/lc/: mod.rs  q10.rs  q136.rs  q2.rs  q2739.rs  q29.rs  q3.rs  q3607.rs  q5.rs  q509.rs  q6.rs  q7.rs  q8.rs  q9.rs  q904.rs
react/: Cargo.toml
react/src/: component.rs  context.rs  counter.rs  displaylist.rs  dynamic_char.rs  element.rs  frame.rs  input.rs  lib.rs  log.rs  main.rs  map.rs  message.rs  number.rs  render.rs  runtime.rs  single_char.rs  state.rs  stateful.rs  widget.rs  widget2.rs
react/src/elements/: char_element.rs  column_element.rs  element.rs  mod.rs  number_element.rs  row_element.rs  string_element.rs
react/src/prototypes/: counter1.rs  hooks.rs  number1.rs  render1.rs  widget1.rs
react/src/widgets/: animated_char.rs  column.rs  counter.rs  delayed.rs  download.rs  fast_counter.rs  mod.rs  number.rs  row.rs  single_char.rs  single_line.rs  streamed_counter.rs  text.rs  text_cursor.rs  text_field.rs  timer.rs
simple_server/: Cargo.toml
simple_server/src/: main.rs
src/: document.rs  fruits.rs  go.rs  lib.rs  main.rs  mixture.rs  numbers.rs  object.rs  quicksort.rs  recipe.rs  tree.rs  whoops.rs
stdext/: Cargo.toml
stdext/src/: assertion.rs  async_exp.rs  facts.rs  inheritance.rs  input.rs  lib.rs  linked_list.rs  main.rs  mixture.rs  object.rs  plus.rs  quicksort.rs  recipe.rs  substr.rs  tree.rs  whoops.rs  wrap.rs
tcp_server/: Cargo.toml
tcp_server/src/: main.rs
