[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[build-dependencies]

[profile.release]
debug = true

[[bench]]
name = "benchmark"
harness = false

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
directories = "5.0.1"
documents = "0.1.2"
enclose = "1.2.0"
extend = "1.2.0"
open = "5.0.1"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.39.2", features = ["full"] }
object-derive = { path = "object-derive" }
bon = "3.0.2"
criterion = "0.5.1"
# crossbeam = "0.8.4"
# gtk4 = "0.7.3"
