[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["stdext", "puzzles", "react", "simple_server", "tcp_server", "editor"]

[profile.release]
debug = true

[[bench]]
name = "benchmark"
harness = false

[dependencies]
criterion = "0.5.1"
stdext = { path = "stdext" }
