[package]
name = "stdext"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
directories = "5.0.1"
documents = "0.1.2"
enclose = "1.2.0"
extend = "1.2.0"
open = "5.0.1"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.39.2", features = ["full"] }
bon = "3.0.2"
object-derive = { path = "../object-derive" }
crossterm = "0.29.0"
replace_with = "0.1.8"
# crossbeam = "0.8.4"
# gtk4 = "0.7.3"
reqwest = { version = "0.12.21", features = ["json"] }
# react = { path = "../react" }
